--- a/SciKit Learn ML - Regression, Classification, SVM, Tree and kNN.ipynb
+++ b/SciKit Learn ML - Regression, Classification, SVM, Tree and kNN.ipynb
@@ -1,15 +1,10 @@
-
+{
+ "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Description\n",
-    "\n",
-    "#### Logistic Regression\n",
-    "\n",
-    "Logistic regression is named for the function used at the core of the method, the [logistic function](https://en.wikipedia.org/wiki/Logistic_function).\n",
-    "\n",
-    "The logistic function, also called the **Sigmoid function** was developed by statisticians to describe properties of population growth in ecology, rising quickly and maxing out at the carrying capacity of the environment. It’s an S-shaped curve that can take any real-valued number and map it into a value between 0 and 1, but never exactly at those limits."
+    "# Logistic Regression"
    ]
   },
   {
@@ -233,16 +228,7 @@
    "metadata": {},
    "source": [
     "# Learning the Logistic Regression Model\n",
-    "\n",
-    "The coefficients (Beta values b) of the logistic regression algorithm must be estimated from your training data. This is done using [maximum-likelihood estimation](https://en.wikipedia.org/wiki/Maximum_likelihood_estimation).\n",
-    "\n",
-    "Maximum-likelihood estimation is a common learning algorithm used by a variety of machine learning algorithms, although it does make assumptions about the distribution of your data (more on this when we talk about preparing your data).\n",
-    "\n",
-    "The best coefficients would result in a model that would predict a value very close to 1 (e.g. male) for the default class and a value very close to 0 (e.g. female) for the other class. The intuition for maximum-likelihood for logistic regression is that a search procedure seeks values for the coefficients (Beta values) that minimize the error in the probabilities predicted by the model to those in the data (e.g. probability of 1 if the data is the primary class).\n",
-    "\n",
-    "We are not going to go into the math of maximum likelihood. It is enough to say that a minimization algorithm is used to optimize the best values for the coefficients for your training data. This is often implemented in practice using efficient numerical optimization algorithm (like the Quasi-newton method).\n",
-    "\n",
-    "When you are learning logistic, you can implement it yourself from scratch using the much simpler gradient descent algorithm."
+    "\n"
    ]
   },
   {
@@ -8543,7 +8529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
