--- a/IBM HR Analytics Project.ipynb
+++ b/IBM HR Analytics Project.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +246,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "Name: StandardHours, Length: 1470, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "(1470, 31)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "Name: Attrition, Length: 1470, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "array(['Yes', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "(1470, 1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1607,7 +1607,7 @@
        "[1470 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
        "4                             1  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
        "array(['Travel_Rarely', 'Travel_Frequently', 'Non-Travel'], dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,31 +1752,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hvyd/anaconda3/envs/udemyMLtree/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=True'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass sort=False\n",
-      "\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df1 = pd.concat([ind_BusinessTravel, ind_Department, ind_EducationField, ind_Gender, ind_JobRole, ind_MaritalStatus, ind_OverTime])"
+    "df1 = pd.concat([ind_BusinessTravel, ind_Department, ind_EducationField, ind_Gender, ind_JobRole, ind_MaritalStatus, ind_OverTime], sort=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -3677,7 +3662,7 @@
        "[1470 rows x 23 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3688,7 +3673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3697,7 +3682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3706,7 +3691,7 @@
        "(1470, 51)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3724,7 +3709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3734,7 +3719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3743,7 +3728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3752,7 +3737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3766,7 +3751,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3777,7 +3762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3786,7 +3771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3795,7 +3780,7 @@
        "1.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3806,7 +3791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3815,8 +3800,8 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00       921\n",
-      "          1       1.00      1.00      1.00       181\n",
+      "          0       1.00      1.00      1.00       929\n",
+      "          1       1.00      1.00      1.00       173\n",
       "\n",
       "avg / total       1.00      1.00      1.00      1102\n",
       "\n"
@@ -3829,17 +3814,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[921,   0],\n",
-       "       [  0, 181]])"
+       "array([[929,   0],\n",
+       "       [  0, 173]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3850,16 +3835,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.77989130434782605"
+       "0.76902173913043481"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3870,7 +3855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3879,10 +3864,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.88      0.86      0.87       312\n",
-      "          1       0.30      0.34      0.32        56\n",
+      "          0       0.85      0.88      0.86       304\n",
+      "          1       0.30      0.25      0.27        64\n",
       "\n",
-      "avg / total       0.79      0.78      0.79       368\n",
+      "avg / total       0.75      0.77      0.76       368\n",
       "\n"
      ]
     }
@@ -3893,17 +3878,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[268,  44],\n",
-       "       [ 37,  19]])"
+       "array([[267,  37],\n",
+       "       [ 48,  16]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
